hphp/test/zend/good/Zend/tests/traits/interface_002.php.expectf

Fatal error: Class bar contains abstract method (abc) and must therefore be declared abstract or implement the remaining methods in %s/interface_002.php on line 12
